--- a/app/src/main/res/layout/holiday_deal_list_item.xml
+++ b/app/src/main/res/layout/holiday_deal_list_item.xml
@@ -8,24 +8,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"
         />
 <LinearLayout
     android:layout_height="wrap_content"
-    android:layout_width="0dp"
-    android:orientation="vertical"
-    android:layout_weight="1"
+    android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_margin="5dp"
+    android:layout_gravity="center"
     >
     <TextView
         android:id="@+id/li_dealTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
          tools:text="Delas"
+        android:textColor="@color/colorPrimary"
+        android:layout_weight="1"
         />
     <TextView
         android:id="@+id/li_dealBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Delas"
+        android:layout_weight="1"
         />
 
     <TextView
@@ -33,6 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Delas"
+        android:textColor="@color/colorAccent"
+        android:layout_weight="1"
         />
 </LinearLayout>
 </LinearLayout>
