--- a/app/src/main/res/layout/holiday_deal_list_item.xml
+++ b/app/src/main/res/layout/holiday_deal_list_item.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_margin="5dp"
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/deal_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         tools:src="@mipmap/ic_launcher"
         android:scaleType="centerCrop"
         />
