--- a/app/src/main/res/layout/holiday_deal_list_item.xml
+++ b/app/src/main/res/layout/holiday_deal_list_item.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/deal_image"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        tools:src="@mipmap/ic_launcher"
-        android:scaleType="centerCrop"
-        />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:elevation="10dp"
+        android:layout_height="wrap_content">
+
+
 <LinearLayout
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:layout_margin="5dp"
-    android:layout_gravity="center"
     >
+
+    <ImageView
+    android:id="@+id/deal_image"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    tools:src="@mipmap/ic_launcher"
+    android:scaleType="centerCrop"
+    />
     <TextView
         android:id="@+id/li_dealTitle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         tools:text="Delas"
+         tools:text="Delkkkas"
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
         android:textColor="@color/colorPrimary"
         android:layout_weight="1"
         />
@@ -31,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Delas"
+        android:layout_gravity="center"
         android:layout_weight="1"
         />
 
@@ -39,8 +50,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Delas"
+        android:layout_gravity="center"
         android:textColor="@color/colorAccent"
         android:layout_weight="1"
         />
 </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
